# enhanced-winget

./: .gitignore  README.md  index.html  prd.txt  render.yaml  setup-all.ewin  setup-all.ps1  setup-local.ps1
assets/: index-Bsr1j9W-.js  index-C9AgfZjw.js  index-CEGDc2ZS.css  index-CwMnTfgO.js  index-Da0zJQK-.js  index-I0JA_-Kv.js
backend/: llm.py  main.py  requirements.txt  scraper.py  test_client.py
daemon/: Cargo.toml
daemon/src/: main.rs  os_integration.rs  package_manager.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
installer/: install-ew.ps1
