[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
futures-util = "0.3"
winrt-notification = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser", "sysinfoapi"] }
wmi = "0.13"
